scrollbar fix

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -1025,13 +1025,8 @@ a:hover .header-profile-image {
 
 /*responsive mobile*/
 @media screen and (max-width: 775px) {
-  html,body{
-    height: auto;
-  }
   .content {
-    height:auto;
-    padding-top: 0; 
-    margin-top: 49px;
+    padding-top: 49px; 
   }
 
   /*Heading and Text CSS*/
